WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256519
[GStreamer] video.loop cannot reliably be set on a paused pipeline
https://bugs.webkit.org/show_bug.cgi?id=256519
Summary
[GStreamer] video.loop cannot reliably be set on a paused pipeline
Philippe Normand
Reported
2023-05-09 03:35:14 PDT
See
https://bugs.webkit.org/show_bug.cgi?id=227687
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-10 02:51:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13688
EWS
Comment 2
2023-05-10 12:40:03 PDT
Committed
263921@main
(36d90edba1d7): <
https://commits.webkit.org/263921@main
> Reviewed commits have been landed. Closing PR #13688 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-10 12:41:18 PDT
<
rdar://problem/109166431
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug