Cherry-pick 263921@main (36d90edba1d7). https://bugs.webkit.org/show_bug.cgi?id=256519

[GStreamer] video.loop cannot reliably be set on a paused pipeline
    https://bugs.webkit.org/show_bug.cgi?id=256519

    Reviewed by Xabier Rodriguez-Calvar.

    Flushing seeks are now working again on looping videos when seamless seeking is not achievable.
    Without this patch there is an infinite seek/didEnd loop at EOS for those cases.

    * LayoutTests/media/video-played-collapse.html:
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::doSeek):
    (WebCore::MediaPlayerPrivateGStreamer::seek):
    (WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
    (WebCore::MediaPlayerPrivateGStreamer::isSeamlessSeekingEnabled const):

    Canonical link: https://commits.webkit.org/263921@main

Canonical link: https://commits.webkit.org/260527.359@webkitglib/2.40